<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityQuestionOne">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/shape_frame_bg_q"
        app:layout_constraintBottom_toBottomOf="@+id/contextquestionone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/bigshouldersmed"

        android:id="@+id/qestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/question"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/bigshouldersmed"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:id="@+id/counter"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/bigshouldersmed"

        android:lineSpacingMultiplier="1"
        android:lineSpacingExtra="20sp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="30dp"
        android:id="@+id/contextquestionone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contextquestionone"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qestion" />

    <RadioGroup

        android:padding="30dp"
        android:id="@+id/rgq1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <RadioButton
            android:fontFamily="@font/bigshouldersmed"

            android:id="@+id/rb1q1"
            android:backgroundTint="@color/black"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ios" />

        <RadioButton
            android:fontFamily="@font/bigshouldersmed"

            android:id="@+id/rb2q1"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Android" />

        <RadioButton
            android:fontFamily="@font/bigshouldersmed"

            android:id="@+id/rb3q1"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Windowsphone" />
    </RadioGroup>

    <Button
        android:fontFamily="@font/bigshouldersmed"

        android:onClick="onclickbuttonMethod"
        android:layout_margin="15dp"
        android:id="@+id/confirm1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:background="@drawable/buttonshape"
        android:padding="20dp"
        android:text="@string/Confirm"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgq1" />

</androidx.constraintlayout.widget.ConstraintLayout>